--- a/package.json
+++ b/package.json
@@ -14,10 +14,12 @@
     "email": "foundation@zurb.com"
   },
   "dependencies": {
+    "flickity": "^2.1.1",
+    "flickity-fullscreen": "^1.1.0",
     "foundation-sites": "~6.4.0",
     "jquery": ">=3.0.0",
-    "what-input": "^4.1.3",
-    "motion-ui": "~1.2.2"
+    "motion-ui": "~1.2.2",
+    "what-input": "^4.1.3"
   },
   "devDependencies": {
     "gulp": "^3.9.0",
