--- a/.gitignore
+++ b/.gitignore
@@ -41,8 +41,8 @@ Thumbs.db
 # Editor files #
 ######################
 # Sublime Text
-*.sublime-workspace
-*.sublime-project
+.sublime-workspace
+.sublime-project
 
 # Codekit (https://codekitapp.com/)
 config.codekit
@@ -87,3 +87,7 @@ wp-content/wp-cache-config.php
 wp-content/plugins/hello.php
 wp-content/wflogs/*
 wp-content/plugins/wordfence/tmp/configCache.php
+
+# Custom #
+#############
+
