--- a/.gitignore
+++ b/.gitignore
@@ -87,3 +87,35 @@ wp-content/wp-cache-config.php
 wp-content/plugins/hello.php
 wp-content/wflogs/*
 wp-content/plugins/wordfence/tmp/configCache.php
+css/app.css
+*.json
+temp/cms-templates/cms-page.php
+temp/cms-templates/cms-yacht.php
+temp/cms-templates/cms-yachts.php
+temp/css/foundation.css
+temp/css/foundation.min.css
+temp/css/temp-min.css
+temp/css/temp.css
+temp/js/app.js
+temp/js/vendor/foundation.js
+temp/js/vendor/foundation.min.js
+temp/js/vendor/jquery.js
+temp/js/vendor/what-input.js
+temp/zurb-templates/agency.html
+temp/zurb-templates/basic.html
+temp/zurb-templates/blog-simple.html
+temp/zurb-templates/blog.html
+temp/zurb-templates/ecommerce.html
+temp/zurb-templates/index.html
+temp/zurb-templates/marketing-site.html
+temp/zurb-templates/news-magazine.html
+temp/zurb-templates/portfolio.html
+temp/zurb-templates/product-page.html
+temp/zurb-templates/real-estate.html
+yachts-old.php
+config.codekit3
+css/app.css
+sc.sublime-workspace
+css/app.css
+sc.sublime-workspace
+config.codekit3
